feat: add Gradle support

--- a/src/resources/templates/index.html
+++ b/src/resources/templates/index.html
@@ -24,8 +24,8 @@
                             <label for="maven">Maven</label>
                         </span>
                                 <span>
-                            <input id="gradle" type="radio" name="project_type" disabled />
-                            <label for="gradle" aria-disabled="true">Gradle</label>
+                            <input id="gradle" type="radio" name="project_type" />
+                            <label for="gradle">Gradle</label>
                         </span>
                     </div>
 
