--- a/web/style.css
+++ b/web/style.css
@@ -76,11 +76,11 @@ input[type=radio]:hover {
     @apply bg-black text-white dark:bg-white dark:text-black outline-none;
 }
 #submit > .key {
-    @apply font-normal transition-colors duration-100
+    @apply font-normal pl-4
 }
 #submit:focus-visible > .key,
 #submit:hover > .key {
-    @apply text-white dark:text-black
+    @apply text-white dark:text-black transition-colors duration-100
 }
 
 .control-inline {
@@ -109,11 +109,11 @@ label[aria-disabled] {
 }
 
 .twoside > .left {
-    @apply pr-10 mr-10 flex-1/2 border-r-2 border-r-slate-200
+    @apply w-1/2 flex-1 border-r-slate-200 lg:pr-10 lg:mr-10 lg:border-r-2
 }
 
 .twoside > .right {
-    @apply flex-1/2;
+    @apply w-1/2 flex-1 hidden lg:block;
 }
 
 .bullets {
@@ -138,5 +138,5 @@ footer p.notice a {
 }
 
 footer svg {
-    @apply w-5 mx-auto pb-3
+    @apply w-6 mx-auto mb-3 inline-block
 }
