chore: update example plugin coordinates

--- a/src/resources/templates/index.html
+++ b/src/resources/templates/index.html
@@ -57,7 +57,7 @@
                         </div>
                         <div class="control-inline">
                             <label for="artifact">Artifact</label>
-                            <input id="artifact" type="text" name="artifact" value="demo" required pattern="[a-z][a-z0-9\-_]+[a-zA-Z0-9]+" />
+                            <input id="artifact" type="text" name="artifact" value="demoplugin" required pattern="[a-z][a-z0-9\-_]+[a-zA-Z0-9]+" />
                         </div>
                         <div class="control-inline">
                             <label for="description">Description</label>
@@ -65,7 +65,7 @@
                         </div>
                         <div class="control-inline">
                             <label for="package_name">Package Name</label>
-                            <input id="package_name" type="text" name="package_name" value="com.example.plugin" required pattern="[a-z][a-z0-9_]*(\.[a-z0-9_]+)+[0-9a-z_]" />
+                            <input id="package_name" type="text" name="package_name" value="com.example.demoplugin" required pattern="[a-z][a-z0-9_]*(\.[a-z0-9_]+)+[0-9a-z_]" />
                         </div>
                     </div>
 
